welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var c = 0
	for (c <- 0 to nums.length-1)
	{
		if (nums(c) == value)
		{
			return c;
		}
		else return -1;
	}
}
